@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,11 +48,11 @@ import static org.junit.jupiter.api.Assertions.fail;
 /**
  * @test
  * @bug 6875847 6992272 7002320 7015500 7023613 7032820 7033504 7004603
- *    7044019 8008577 8176853 8255086 8263202 8287868
+ *    7044019 8008577 8176853 8255086 8263202 8287868 8174269
  * @summary test API changes to Locale
  * @modules jdk.localedata
  * @compile LocaleEnhanceTest.java
- * @run junit/othervm -Djava.locale.providers=JRE,SPI -esa LocaleEnhanceTest
+ * @run junit/othervm -esa LocaleEnhanceTest
  */
 public class LocaleEnhanceTest {
 
@@ -668,11 +668,11 @@ public class LocaleEnhanceTest {
                 "English",
                 "English (United States)",
                 "United States",
-                "Norwegian (Norway,Nynorsk)",
+                "Norwegian (Norway, Nynorsk)",
                 "Nynorsk",
                 "Chinese (Simplified)",
                 "Chinese (Traditional)",
-                "Chinese (Simplified,China)",
+                "Chinese (Simplified, China)",
                 "Simplified",
         };
 
@@ -681,11 +681,11 @@ public class LocaleEnhanceTest {
                 "\u82f1\u8bed",
                 "\u82f1\u8bed (\u7f8e\u56fd)",
                 "\u7f8e\u56fd",
-                "\u632a\u5a01\u8bed (\u632a\u5a01,Nynorsk)",
+                "\u632a\u5a01\u8bed (\u632a\u5a01\uff0cNynorsk)",
                 "Nynorsk",
                 "\u4e2d\u6587 (\u7b80\u4f53)",
                 "\u4e2d\u6587 (\u7e41\u4f53)",
-                "\u4e2d\u6587 (\u7b80\u4f53,\u4e2d\u56fd)",
+                "\u4e2d\u6587 (\u7b80\u4f53\uff0c\u4e2d\u56fd)",
                 "\u7b80\u4f53",
         };
 
