@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,10 @@
 
 /*
  * @test
- * @bug 4487276 8008577
+ * @bug 4487276 8008577 8174269
  * @modules jdk.localedata
  * @summary Verify that Hong Kong locale uses traditional Chinese names.
- * @run main/othervm -Djava.locale.providers=COMPAT,SPI HongKong
+ * @run main/othervm HongKong
  */
 
 import java.util.Locale;
@@ -39,7 +39,7 @@ public class HongKong {
             Locale.setDefault(Locale.of("zh", "HK"));
             checkCountry(Locale.GERMANY, "\u5fb7\u570b");
             checkCountry(Locale.FRANCE, "\u6cd5\u570b");
-            checkCountry(Locale.ITALY, "\u7fa9\u5927\u5229");
+            checkCountry(Locale.ITALY, "\u610f\u5927\u5229");
             checkTimeZone("Asia/Shanghai",
                             "\u4e2d\u570b\u6a19\u6e96\u6642\u9593");
         } finally {
@@ -51,7 +51,8 @@ public class HongKong {
     private static void checkCountry(Locale country, String expected) {
         String actual = country.getDisplayCountry();
         if (!expected.equals(actual)) {
-            throw new RuntimeException();
+            throw new RuntimeException("Failed. actual: %s, expected: %s"
+                    .formatted(actual, expected));
         }
     }
 
@@ -59,7 +60,8 @@ public class HongKong {
         TimeZone timeZone = TimeZone.getTimeZone(timeZoneID);
         String actual = timeZone.getDisplayName();
         if (!expected.equals(actual)) {
-            throw new RuntimeException();
+            throw new RuntimeException("Failed. actual: %s, expected: %s"
+                .formatted(actual, expected));
         }
     }
 }
